Adicionando estilo ao cabeçalho

--- a/frontend/src/sass/header.scss
+++ b/frontend/src/sass/header.scss
@@ -1,3 +1,10 @@
 .header{
+    display: flex;
     grid-area: header;
+    background-color: #DFCED9;
+    box-shadow: 2px 2px 2px 1px rgba(0,0,0,0.2);
+    margin-bottom:5px;
+    justify-content:flex-end;
+    align-items: center;
+    
 }
