--- a/frontend/src/sass/menu.scss
+++ b/frontend/src/sass/menu.scss
@@ -1,3 +1,14 @@
-.menu{
+.menu {
     grid-area: menu;
+    display:flex;
+    list-style: none;
+    justify-self: flex-end;
+    
+    li{
+        margin-right:5px;
+        a{
+            text-decoration:none;
+            vertical-align: center;
+        }
+    }
 }
