--- a/frontend/src/sass/index.scss
+++ b/frontend/src/sass/index.scss
@@ -1,13 +1,16 @@
 .App{
     display: grid;
-    grid-template-rows: 300px 200px;
+    grid-template-rows: 100px 1fr 100px;
     grid-template-columns: 1fr;
     grid-template-areas: 
     "header"
-    "footer"
+    "content"
+    "footer";
+    height: 100vh
 }
+
 #root{
-    margin:0
+    margin:0;       
 }
 body{
     margin:0
