--- a/frontend/src/sass/content.scss
+++ b/frontend/src/sass/content.scss
@@ -1,3 +1,23 @@
 .content{
-    grid-area:content
+    grid-area:content;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #F4E5D8;
+    .title{
+        // align-self:flex-start;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 2.4rem;
+        color:#FBFBFF;
+        // margin-left:100px;
+    }
+    .post{
+        display:flex;
+        // border:1px solid #000;
+        width:50vw;
+        padding:20px;
+        box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.2);
+        background-color:#fff
+    }
 }
