--- a/frontend/src/sass/footer.scss
+++ b/frontend/src/sass/footer.scss
@@ -1,3 +1,14 @@
 .footer{
     grid-area: footer;
+    display: flex;
+    background-color: #DFCED9;
+    box-shadow: 2px -2px 2px 1px rgba(0,0,0,0.2);
+    z-index: 1;
+    justify-content: flex-end;
+    align-items: center;
+    padding:10px;
+    font-size:1.2rem;
+    p{
+        margin-left:5px;
+    }
 }
