--- a/frontend/src/sass/header.scss
+++ b/frontend/src/sass/header.scss
@@ -1,10 +1,12 @@
 .header{
-    display: flex;
     grid-area: header;
-    background-color: #DFCED9;
-    box-shadow: 2px 2px 2px 1px rgba(0,0,0,0.2);
-    // margin-bottom:5px;
-    justify-content:flex-end;
+    
+    display: flex;
+    justify-content:space-between;
     align-items: center;
+    background-color: #DFCED9;
+    color:#fff;
+    padding: 20px;
+    box-shadow: 2px 2px 2px 1px rgba(0,0,0,0.2);
     z-index: 1;
 }
