--- a/frontend/src/sass/menu.scss
+++ b/frontend/src/sass/menu.scss
@@ -7,8 +7,13 @@
     li{
         margin-right:5px;
         a{
+            color:#000;
+            margin-left: 5px;
             text-decoration:none;
             vertical-align: center;
+            i{
+                margin-right: 5px;
+            }
         }
     }
 }
