--- a/frontend/src/sass/content.scss
+++ b/frontend/src/sass/content.scss
@@ -1,23 +1,33 @@
+@import '../sass-variables/backgrounds.scss';
+@import '../sass-variables/fonts.scss';
+
 .content{
     grid-area:content;
+    
     display:flex;
-    flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    flex-direction: column;
     background-color: #F4E5D8;
     .title{
-        // align-self:flex-start;
         font-family: Arial, Helvetica, sans-serif;
         font-size: 2.4rem;
         color:#FBFBFF;
-        // margin-left:100px;
     }
     .post{
         display:flex;
-        // border:1px solid #000;
+        flex-direction: column;
         width:50vw;
-        padding:20px;
+        padding:10px;
         box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.2);
-        background-color:#fff
+        background-color: $back-white;
+        color: $font-black;
+        .post-header{
+            padding-bottom: 10px;
+            font-size:1.4rem;
+            border-bottom: 1px solid #aaa;
+        }
+        .post-content{
+        }
     }
 }
