--- a/frontend/src/sass/content.scss
+++ b/frontend/src/sass/content.scss
@@ -1,5 +1,5 @@
-@import '../sass-variables/backgrounds.scss';
-@import '../sass-variables/fonts.scss';
+@import 'sass-variables/backgrounds.scss';
+@import 'sass-variables/fonts.scss';
 
 .content{
     grid-area:content;
@@ -9,8 +9,12 @@
     align-items: center;
     flex-direction: column;
     background-color: #F4E5D8;
+    font-family: $Roboto;
+
+    h2{
+        margin:20px;
+    }
     .title{
-        font-family: Arial, Helvetica, sans-serif;
         font-size: 2.4rem;
         color:#FBFBFF;
     }
@@ -22,12 +26,32 @@
         box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.2);
         background-color: $back-white;
         color: $font-black;
+        margin-bottom: 10px;
         .post-header{
+            display:flex;
             padding-bottom: 10px;
-            font-size:1.4rem;
             border-bottom: 1px solid #aaa;
+            flex-wrap: wrap;
+            img{
+                width:200px;
+                margin-right: 10px;
+                justify-self: flex-start;
+            }
+            .post-name{
+                font-size:1.2rem;
+            }
+            .post-description{
+                width: 100%;
+                margin-top:5px;
+                font-size: 1.2rem;
+                color:rgba(0,0,0,0.2);
+            }
         }
         .post-content{
+            margin-top:10px;
+            text-align: justify;
+            padding: 10px;
+            text-indent: 30px;
         }
     }
 }
