--- a/frontend/src/sass/header.scss
+++ b/frontend/src/sass/header.scss
@@ -1,3 +1,6 @@
+@import 'sass-variables/backgrounds.scss';
+@import 'sass-variables/fonts.scss';
+
 .header{
     grid-area: header;
     
@@ -5,8 +8,13 @@
     justify-content:space-between;
     align-items: center;
     background-color: #DFCED9;
-    color:#fff;
+    color:$font-white;
+    font-family: $Roboto;
     padding: 20px;
     box-shadow: 2px 2px 2px 1px rgba(0,0,0,0.2);
     z-index: 1;
+    h1 a{
+        text-decoration: none;
+        color:$font-white;
+    }
 }
