--- a/frontend/src/sass/admin.scss
+++ b/frontend/src/sass/admin.scss
@@ -1,18 +1,20 @@
 @import './sass-variables/backgrounds.scss';
 @import './sass-variables/fonts.scss';
-
+@import './sass-variables/mixin.scss';
 .admin-table{
-    display:flex;
-    flex-direction: column;
+    @include d-flex(column);
     font-family: $Roboto;
     margin:20px;
+
     h1{
         align-self: center;
     }
     .table{
         padding: 0;
         margin: 0;
-        // border: 1px solid $font-black;
+        tbody{
+            text-align: center;
+        }
         .t-header tr th{
             padding: 15px 0px;
             margin: 0;
@@ -20,8 +22,25 @@
             background-color: $back-base;
             color:$font-white
         }
-        .button-action{
-            display: flex
+        .table-actions{
+            button:nth-child(1){
+                color:red;
+                background: $back-white;
+                border:none;
+                box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.4);
+                margin-right:5px;
+                
+            }
+            button:nth-child(2){
+                color:yellow;
+                background: $back-white;
+                
+            }
+            button{
+                width: 40px;
+                padding: 8px;
+                font-size: 15px;
+            }
         }
     }
 }
