--- a/frontend/src/sass/content.scss
+++ b/frontend/src/sass/content.scss
@@ -1,13 +1,13 @@
 @import 'sass-variables/backgrounds.scss';
 @import 'sass-variables/fonts.scss';
+@import 'sass-variables/mixin.scss';
 
 .content{
     grid-area:content;
     
-    display:flex;
+    @include d-flex(column);
     justify-content: space-around;
     align-items: center;
-    flex-direction: column;
     background-color: #F4E5D8;
     font-family: $Roboto;
 
@@ -19,8 +19,7 @@
         color:#FBFBFF;
     }
     .post{
-        display:flex;
-        flex-direction: column;
+        @include d-flex(column);
         width:50vw;
         padding:10px;
         box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.2);
@@ -44,7 +43,7 @@
                 width: 100%;
                 margin-top:5px;
                 font-size: 1.2rem;
-                color:rgba(0,0,0,0.2);
+                color:$font-black2;
             }
         }
         .post-content{
