--- a/frontend/src/sass/header.scss
+++ b/frontend/src/sass/header.scss
@@ -7,7 +7,7 @@
     display: flex;
     justify-content:space-between;
     align-items: center;
-    background-color: #DFCED9;
+    background-color: $back-base;
     color:$font-white;
     font-family: $Roboto;
     padding: 20px;
